@@ -1,12 +1,18 @@
 package com.jianzj.ticket.service.frameworks.starter.user.core;
 
 import com.jianzj.ticket.service.frameworks.starter.base.constant.UserConstant;
-import jakarta.servlet.*;
+import jakarta.servlet.Filter;
+import jakarta.servlet.FilterChain;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.ServletRequest;
+import jakarta.servlet.ServletResponse;
 import jakarta.servlet.http.HttpServletRequest;
 import org.springframework.util.StringUtils;
 
 import java.io.IOException;
 import java.net.URLDecoder;
+
+import static java.nio.charset.StandardCharsets.UTF_8;
 
 /**
  * @Author JianZJ
@@ -19,26 +25,30 @@ import java.net.URLDecoder;
 public class UserTransmitFilter implements Filter {
     @Override
     public void doFilter(ServletRequest request, ServletResponse response, FilterChain chain) throws IOException, ServletException {
-        HttpServletRequest httpRequest = (HttpServletRequest) request;
-        // TODO 为什么不是通过解析token再处理
-        String userId = httpRequest.getHeader(UserConstant.USER_ID_KEY);
-        String username = httpRequest.getHeader(UserConstant.USER_NAME_KEY);
-        String realName = httpRequest.getHeader(UserConstant.REAL_NAME_KEY);
-        String token = httpRequest.getHeader(UserConstant.USER_TOKEN_KEY);
-        if (StringUtils.hasText(realName)) {
-            realName = URLDecoder.decode(realName, "UTF-8");
+        HttpServletRequest httpServletRequest = (HttpServletRequest) request;
+        String userId = httpServletRequest.getHeader(UserConstant.USER_ID_KEY);
+        if (StringUtils.hasText(userId)) {
+            String userName = httpServletRequest.getHeader(UserConstant.USER_NAME_KEY);
+            String realName = httpServletRequest.getHeader(UserConstant.REAL_NAME_KEY);
+            if (StringUtils.hasText(userName)) {
+                userName = URLDecoder.decode(userName, UTF_8);
+            }
+            if (StringUtils.hasText(realName)) {
+                realName = URLDecoder.decode(realName, UTF_8);
+            }
+            String token = httpServletRequest.getHeader(UserConstant.USER_TOKEN_KEY);
+            UserInfoDTO userInfoDTO = UserInfoDTO.builder()
+                    .userId(userId)
+                    .username(userName)
+                    .realName(realName)
+                    .token(token)
+                    .build();
+            UserContext.setUser(userInfoDTO);
         }
-        UserInfoDTO userInfoDTO = UserInfoDTO.builder()
-                .userId(userId)
-                .username(username)
-                .realName(realName)
-                .token(token)
-                .build();
-        UserContext.setUser(userInfoDTO);
         try {
-            doFilter(httpRequest, response, chain);
+            chain.doFilter(request, response);
         } finally {
-            UserContext.removeUser();;
+            UserContext.removeUser();
         }
     }
 }
